# Music_Making

./: .gitignore  DESIGN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
blender/: README.md  render_scene.py  walk_complex.py  walk_features.py  walk_scene.py
demos/lava/: metadata.json
demos/night/: metadata.json
docs/: decision_map.md  design_state.md  modal_identity.md  relative_period.md  viewer_coupled_dynamics.md
examples/walk_complex/: README.md
scripts/: blender_feature_test.py  color_listen.py  consonance_study.py  extract_demo.py  inharmonic_good.py  modal_walk.py  periodicity_study.py  tabulation_demo.py  texture_demo.py  walk_listen.py
src/music_making/: __init__.py  audio.py  beats.py  capture.py  cli.py  color_spectrum.py  composition.py  consonance.py  contracts.py  dynamics.py  extract.py  genre.py  images.py  lyrics.py  midi.py  mix.py  modes.py  orchestrator.py  qc.py  safety.py  storyboard.py  structure.py  tabulation.py  texture.py  theory.py  timbre.py  vocals.py
tabulations/: forest_fire_walk.yaml
tests/: conftest.py  test_audio.py  test_capture.py  test_color_spectrum.py  test_consonance.py  test_contracts.py  test_extract.py  test_images.py  test_lyrics.py  test_pipeline.py  test_qc.py  test_safety.py  test_story.py  test_structure.py  test_tabulation.py  test_texture.py  test_theory.py  test_timbre.py  test_video.py
