[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "music_making"
version = "0.1.0"
description = "Autonomously compose original music from a scene: a storyboard drives parallel lyric/composition/beat/vocal workflows into one mixed track."
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "numpy>=1.26",
    "scipy>=1.11",
    "soundfile>=0.12",
    "mido>=1.3",
    "librosa>=0.10",
    "pydub>=0.25",
    "opencv-python-headless>=4.8",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
make-song = "music_making.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/music_making"]

[tool.pytest.ini_options]
testpaths = ["tests"]
